fixed some text visibility issues. Closes #24

--- a/src/main/resources/style/Dark.css
+++ b/src/main/resources/style/Dark.css
@@ -57,4 +57,6 @@
   -fx-text-fill: white;
 }
 
-
+#DropDownText {
+  -fx-text-fill: white;
+}
